--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -8,7 +8,7 @@
         <p>{{ course.description }}</p>
         <a href="{% url 'instructor:course_detail' course.id %}" class="btn btn-primary">View Course</a>
             {% if user.is_authenticated and user.role == 'student' %}
-                <a href="{% url 'enroll_course' course.id %}">Enroll</a>
+                <a href="{% url 'student:enroll_course' course.id %}">Enroll</a>
             {% endif %}
 
 
